<resources>
    <string name="app_name">EduGaming</string>
    <string name="sign_up">Sign-up</string>
    <string name="login">Login</string>
    <string name="logo_name">EduGaming Logo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="welcome_message">Welcome</string>
    <string name="edit_profile">Edit profile</string>
    <string name="manage_reservations">Manage reservations</string>
    <string name="logout">Logout</string>
    <string name="coach_avatar">Coach avatar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="accessToken">accessToken</string>
    <!--Strings related to coach profile-->
    <string name="coach">coach</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="Username">Username</string>
    <string name="Game">Game</string>
    <string name="Price">Price</string>
    <string name="PriceHint">10</string>
    <string name="Summary">Summary</string>
    <string name="Description">Description</string>
    <string name="Save">Save</string>
    <string name="tokenHeader">x-access-token</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
</resources>
