<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CoachProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/coachImageEdit"
            app:layout_constraintStart_toStartOf="@+id/coachImageEdit">

            <ImageView
                android:id="@+id/coachImageEdit"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/coach_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/change_profile_picture"
                android:textColor="#FFF"
                android:textSize="24sp"
                android:typeface="normal"
                app:fontFamily="@font/karla"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coachImageEdit" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0">

                    <TextView
                        android:id="@+id/Username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/Username"
                        android:textColor="#FFF"
                        android:textSize="18sp"
                        android:typeface="normal"
                        app:fontFamily="@font/karla" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0">

                    <EditText
                        android:id="@+id/editUsername"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:background="@android:color/background_light"
                        android:ems="10"
                        android:hint="Username"
                        android:inputType="textPersonName"
                        android:paddingLeft="5dp"
                        android:paddingRight="0dp"
                        android:textColor="#FFF" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-10dp"
                        android:layout_marginRight="-10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorSecundary"
                        android:text="Button"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_weight="0">

                    <TextView
                        android:id="@+id/Game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/Game"
                        android:textColor="#FFF"
                        android:textSize="18sp"
                        android:typeface="normal"
                        app:fontFamily="@font/karla" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0">

                    <Spinner
                        android:id="@+id/game_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="434dp">

                    <TextView
                        android:id="@+id/Username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/Price"
                        android:textColor="#FFF"
                        android:textSize="18sp"
                        android:typeface="normal"
                        app:fontFamily="@font/karla" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0">

                    <Spinner
                        android:id="@+id/price_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1" />
                </TableRow>

            </TableLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>